UI First Lection

--- a/VKMessenger/VKMessenger/Base.lproj/Main.storyboard
+++ b/VKMessenger/VKMessenger/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="VKMessenger" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7qm-34-7fP">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vv6-0R-B5N">
+                                        <rect key="frame" x="146" y="80" width="122" height="36"/>
+                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yUb-gO-PBt">
+                                        <rect key="frame" x="183.5" y="530" width="47" height="30"/>
+                                        <state key="normal" title="Sign In"/>
+                                        <connections>
+                                            <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6DV-4v-czd"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1t3-SP-JdI">
+                                        <rect key="frame" x="186" y="196" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kk-Ii-XrG">
+                                        <rect key="frame" x="170.5" y="363" width="73.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8XP-PD-Lhe">
+                                        <rect key="frame" x="147" y="416" width="120" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="c8z-Kp-dxX"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qEx-f9-AXH">
+                                        <rect key="frame" x="147" y="249" width="120" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="D4S-EF-9an"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="8XP-PD-Lhe" firstAttribute="top" secondItem="5kk-Ii-XrG" secondAttribute="bottom" constant="32" id="08F-kg-iEe"/>
+                                    <constraint firstItem="1t3-SP-JdI" firstAttribute="top" secondItem="Vv6-0R-B5N" secondAttribute="bottom" constant="80" id="3mf-ZB-3Yg"/>
+                                    <constraint firstAttribute="bottom" secondItem="yUb-gO-PBt" secondAttribute="bottom" constant="219" id="Fr7-y5-MO3"/>
+                                    <constraint firstItem="1t3-SP-JdI" firstAttribute="centerX" secondItem="7qm-34-7fP" secondAttribute="centerX" id="Geq-KR-Dct"/>
+                                    <constraint firstItem="yUb-gO-PBt" firstAttribute="centerX" secondItem="7qm-34-7fP" secondAttribute="centerX" id="H8P-Nw-jhr"/>
+                                    <constraint firstItem="8XP-PD-Lhe" firstAttribute="centerX" secondItem="7qm-34-7fP" secondAttribute="centerX" id="JFU-oJ-Z3f"/>
+                                    <constraint firstItem="Vv6-0R-B5N" firstAttribute="centerX" secondItem="7qm-34-7fP" secondAttribute="centerX" id="TFK-qe-UtM"/>
+                                    <constraint firstItem="Vv6-0R-B5N" firstAttribute="top" secondItem="7qm-34-7fP" secondAttribute="top" constant="80" id="Web-Jn-bvi"/>
+                                    <constraint firstItem="5kk-Ii-XrG" firstAttribute="centerX" secondItem="7qm-34-7fP" secondAttribute="centerX" id="Ys2-GZ-ZYa"/>
+                                    <constraint firstAttribute="trailing" secondItem="Vv6-0R-B5N" secondAttribute="trailing" constant="186" id="dWZ-hI-NuV"/>
+                                    <constraint firstItem="qEx-f9-AXH" firstAttribute="top" secondItem="1t3-SP-JdI" secondAttribute="bottom" constant="32" id="gLf-6k-Zub"/>
+                                    <constraint firstItem="5kk-Ii-XrG" firstAttribute="top" secondItem="qEx-f9-AXH" secondAttribute="bottom" constant="80" id="h17-U0-0rZ"/>
+                                    <constraint firstItem="yUb-gO-PBt" firstAttribute="top" secondItem="8XP-PD-Lhe" secondAttribute="bottom" constant="80" id="kKb-Re-PFx"/>
+                                    <constraint firstItem="qEx-f9-AXH" firstAttribute="centerX" secondItem="7qm-34-7fP" secondAttribute="centerX" id="v9Q-Qb-BRL"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="4z7-yb-uhJ"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="62G-cG-bSD"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7qm-34-7fP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2t7-ol-FTU"/>
+                            <constraint firstItem="7qm-34-7fP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ypg-oT-3ZY"/>
+                            <constraint firstItem="7qm-34-7fP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="btP-YC-Hc3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7qm-34-7fP" secondAttribute="bottom" id="fXP-JZ-ABl"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginInput" destination="qEx-f9-AXH" id="lRh-BB-7KF"/>
+                        <outlet property="passwordInput" destination="8XP-PD-Lhe" id="Jzz-Hs-JDz"/>
+                        <outlet property="scrollView" destination="7qm-34-7fP" id="KHQ-FV-NBk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="105.79710144927537" y="71.651785714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
